# robot

./: CMakeLists.txt  slice2cpp.cmake
client/: CMakeLists.txt  main.cc  move.py
impl/IceCom/: motorI.h
impl/control/: motorControl.h
impl/hardware/: CMakeLists.txt  motorI.cc  motorI.h
impl/hardware/control/: motorControl.cc  motorControl.h
impl/hardware/serial/: motorSerial.cc  motorSerial.h
impl/hardware/services/: motorServiceI.cc
impl/shared/: RTThread.cc  RTThread.h  vs.h
services/: motorServiceI.cc  motorServiceI.h
slice/: CMakeLists.txt  hardware.ice  robot.ice
